update build to Java 7; add docs for Convertor functions